/**

* @file     idmap_diagnosis_log.proto
* @author   jianghongyue
* @details  提供智驾地图诊断信息
* @date     2022-12-30
* @version  1.8
* @copyright(C),changan,2050

**********************************************************************************
* @attention 信号注释规则：
* ///<name ：[uint],(default,min,max),[max_number],(factor,offset),description
* ///<信号名称：[单位]、(默认值、最小值、最大值)、[repeated最大值]、(因数，偏移量)、信号描述

* @par      修改日志：
* <table>
* <tr><th>date              <th>version             <th>author
* <tr><th>2022.08.18         <th>1.2                 <th>jianghongyue
* <tr><th>2023.07.10         <th>2.3                 <th>jianghongyue
* <table>
**********************************************************************************

*/

syntax = "proto3";

package idmap;


/**
* @brief  地图诊断日志输出
* @details  标志地图模块故障时的输入输出问题判断
*/
message IDMapDiagnosisLogInfo
{
  ///< 时间戳: [ms],(/,/,/),[/],(1,0),时间戳
  double time_stamp = 1;

  ///<打印日志:[/],(/,/,/),[/],(/,/),记录报错问题
  string log = 2;
}